# raynet

./: .gitignore  README.md  compile_commands.json  makefile  todo.txt
client/: CMakeLists.txt  makefile
client/inc/: c_constants.h  c_sound.h  c_state.h  c_websocket.h  state.h  websocket.h
client/src/: c_sound.c  c_state.c  c_websocket.c  communication.c  communication.h  main.c  state.c  websocket.c
server/: makefile
server/inc/: queue.h  s_constants.h  s_state.h  s_websocket.h  state.h  websocket.h
server/src/: main.c  queue.c  s_state.c  s_websocket.c  state.c  websocket.c
shared/: shared_constants.h  shared_functions.h
src/: main.c
